# Mini-SQL-On-CSV

./: .gitignore  README.md  commands.txt
crud_operations/: dune-project
crud_operations/src/: ast.ml  data_manipulation.ml  dune  lexer.mll  main.ml  monad.ml  monad.mli  parse.ml  parser.mly  print_table.ml  query.ml  transform.ml  types.ml  update_csv.ml
crud_operations/test/: dune  test_data_manipulation.ml  test_eval.ml  test_main.ml  test_parser.ml  test_query.ml  test_update_csv.ml  test_utils.ml  test_utils.mli
program/: .ocamlformat  dune-project  testing  testing_worked
program/lib/: dune
program/src/: ast.ml  data_manipulation.ml  eval.ml  parser.mly
program/test/: dune  test_data_manipulation.ml  test_utils.ml
