(test
 (name test_parser)
 (libraries interp)
 (modules test_parser))


(test
 (name test_data_manipulation)
 (libraries interp)
 (modules test_data_manipulation)
 (deps
  ; %{project_root} indicate project root according to https://dune.readthedocs.io/en/stable/concepts/variables.html
  (file %{workspace_root}/csv_files/username_file.csv)))
